@@ -22,7 +22,7 @@ LazyData: true
 Collate: 'dimensions.r' 'helper-arrange.r'
     'helper-col-wise.r' 'helper-count.r'
     'helper-data-frame.r' 'helper-defaults.r'
-    'helper-each.r' 'helper-quick-df.r'
+    'helper-each.r' 'helper-mutate.r' 'helper-quick-df.r'
     'helper-round-any.r' 'helper-splat.r'
     'helper-summarise.r' 'helper-try.r'
     'helper-vaggregate.r' 'id.r' 'immutable.r'
