@@ -6,6 +6,7 @@ export(count)
 export(as.data.frame.function)
 export(defaults)
 export(each)
+export(mutate)
 export(quickdf)
 export(round_any)
 export(splat)
